<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_baseline_home_48"
        android:title="@string/text_home"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/device_menu"
        android:icon="@drawable/ic_outline_device_hub_48"
        android:title="@string/text_devices"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/settings_menu"
        android:icon="@drawable/ic_baseline_settings_48"
        android:title="@string/text_settings"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>

</menu>