<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.emergency.section.signup.SignUpActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:theme="@style/materialDesignbyEMFEmergency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSignUp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/materialDesignbyEMFEmergency"
            android:visibility="visible"
            app:popupTheme="@style/materialDesignbyEMFEmergency"
            app:titleTextColor="@color/icons" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:outlineProvider="none"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="22dp"
        android:outlineProvider="none"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/text_hint_nombre"
            android:inputType="textPersonName"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="22dp"
        android:outlineProvider="none"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFullName"
        app:startIconDrawable="@drawable/ic_baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/text_hint_pass"
            android:inputType="textPassword"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="22dp"
        android:outlineProvider="none"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass"
        app:startIconDrawable="@drawable/ic_baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextConfimPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/text_hint_confirm_pass"
            android:inputType="textPassword"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/ubuntu_medium"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/text_terms_conditions_1"
        android:textAlignment="center"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPass" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_medium"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/text_terms_conditions_2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_rect_shape_button_dark_blue"
        android:backgroundTint="@color/btn_color_bakcground"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_btn_registrar"
        android:textColor="@color/box_maps_main"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>